kyanite-core/src/ast/snapshots/kyanite__ast__tests__calls.snap
---
source: kyanite-core/src/ast/mod.rs
expression: program.ast
---
file:
  nodes:
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: foo
          span:
            line: 1
            column: 8
            length: 3
        params:
          - name:
              kind: Identifier
              lexeme: bar
              span:
                line: 1
                column: 12
                length: 3
            ty:
              kind: Type
              lexeme: int
              span:
                line: 1
                column: 17
                length: 3
        ty:
          kind: Type
          lexeme: int
          span:
            line: 1
            column: 23
            length: 3
        body:
          - Return:
              expr:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: bar
                    span:
                      line: 2
                      column: 13
                      length: 3
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 2
                  column: 9
                  length: 6
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: bar
          span:
            line: 5
            column: 8
            length: 3
        params: []
        ty:
          kind: Type
          lexeme: float
          span:
            line: 5
            column: 17
            length: 5
        body:
          - Return:
              expr:
                Float: 42
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 6
                  column: 9
                  length: 6
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: main
          span:
            line: 9
            column: 9
            length: 4
        params: []
        ty:
          kind: Type
          lexeme: int
          span:
            line: 9
            column: 16
            length: 3
        body:
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 10
                      column: 10
                      length: 7
              args:
                - Str: "\"Hello world!\""
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 10
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 10
                    column: 26
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 11
                      column: 10
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: foo
                          span:
                            line: 11
                            column: 14
                            length: 3
                    args:
                      - Int: 72
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 11
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 11
                          column: 18
                          length: 1
                    delimiters: []
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 19
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 12
                      column: 10
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: bar
                          span:
                            line: 12
                            column: 14
                            length: 3
                    args: []
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 12
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 12
                          column: 16
                          length: 1
                    delimiters: []
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 12
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 12
                    column: 17
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 13
                      column: 10
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: max
                          span:
                            line: 13
                            column: 14
                            length: 3
                    args:
                      - Int: 10
                      - Int: 300
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 13
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 13
                          column: 23
                          length: 1
                    delimiters:
                      - kind: Comma
                        lexeme: ~
                        span:
                          line: 13
                          column: 18
                          length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 13
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 13
                    column: 24
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 14
                      column: 10
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: min
                          span:
                            line: 14
                            column: 14
                            length: 3
                    args:
                      - Float: 10
                      - Float: 300
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 14
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 14
                          column: 25
                          length: 1
                    delimiters:
                      - kind: Comma
                        lexeme: ~
                        span:
                          line: 14
                          column: 19
                          length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 14
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 14
                    column: 26
                    length: 1
              delimiters: []
          - Return:
              expr:
                Int: 0
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 16
                  column: 9
                  length: 6

