kyanite-core/src/ast/snapshots/kyanite__ast__tests__mixed.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
file:
  nodes:
    - ConstantDecl:
        name:
          kind: Identifier
          lexeme: FOO
          span:
            line: 1
            column: 9
            length: 3
        ty:
          kind: Type
          lexeme: float
          span:
            line: 1
            column: 16
            length: 5
        expr:
          Float: 5
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: mulByTwo
          span:
            line: 3
            column: 13
            length: 8
        params:
          - name:
              kind: Identifier
              lexeme: lhs
              span:
                line: 3
                column: 17
                length: 3
            ty:
              kind: Type
              lexeme: float
              span:
                line: 3
                column: 24
                length: 5
          - name:
              kind: Identifier
              lexeme: rhs
              span:
                line: 3
                column: 29
                length: 3
            ty:
              kind: Type
              lexeme: int
              span:
                line: 3
                column: 34
                length: 3
        ty:
          kind: Type
          lexeme: float
          span:
            line: 3
            column: 42
            length: 5
        body:
          - VarDecl:
              name:
                kind: Identifier
                lexeme: rhs
                span:
                  line: 4
                  column: 11
                  length: 3
              ty:
                kind: Type
                lexeme: float
                span:
                  line: 4
                  column: 18
                  length: 5
              expr:
                Float: 8
          - Return:
              expr:
                Binary:
                  left:
                    Binary:
                      left:
                        Ident:
                          name:
                            kind: Identifier
                            lexeme: lhs
                            span:
                              line: 5
                              column: 14
                              length: 3
                      op:
                        kind: Star
                        lexeme: ~
                        span:
                          line: 5
                          column: 16
                          length: 1
                      right:
                        Ident:
                          name:
                            kind: Identifier
                            lexeme: rhs
                            span:
                              line: 5
                              column: 20
                              length: 3
                  op:
                    kind: Plus
                    lexeme: ~
                    span:
                      line: 5
                      column: 22
                      length: 1
                  right:
                    Ident:
                      name:
                        kind: Identifier
                        lexeme: FOO
                        span:
                          line: 5
                          column: 26
                          length: 3
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 5
                  column: 10
                  length: 6
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: main
          span:
            line: 8
            column: 9
            length: 4
        params: []
        ty:
          kind: Type
          lexeme: int
          span:
            line: 8
            column: 16
            length: 3
        body:
          - VarDecl:
              name:
                kind: Identifier
                lexeme: a
                span:
                  line: 9
                  column: 9
                  length: 1
              ty:
                kind: Type
                lexeme: float
                span:
                  line: 9
                  column: 16
                  length: 5
              expr:
                Float: 5
          - VarDecl:
              name:
                kind: Identifier
                lexeme: b
                span:
                  line: 10
                  column: 9
                  length: 1
              ty:
                kind: Type
                lexeme: int
                span:
                  line: 10
                  column: 14
                  length: 3
              expr:
                Int: 7
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: mulByTwo
                    span:
                      line: 11
                      column: 12
                      length: 8
              args:
                - Ident:
                    name:
                      kind: Identifier
                      lexeme: a
                      span:
                        line: 11
                        column: 14
                        length: 1
                - Ident:
                    name:
                      kind: Identifier
                      lexeme: b
                      span:
                        line: 11
                        column: 17
                        length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 13
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 18
                    length: 1
              delimiters:
                - kind: Comma
                  lexeme: ~
                  span:
                    line: 11
                    column: 15
                    length: 1
          - Return:
              expr:
                Int: 0
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 13
                  column: 10
                  length: 6

